fix second section mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -709,6 +709,9 @@
 			.hover-cat {
 				top: -17%;
 			}
+			.hover-vat-bottom {
+				top: 102%;
+			}
 		}
 		.article-container.hovered{
 			filter: blur(0px);
